--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primise-process",
+  "name": "promise-process",
   "version": "1.0.0",
   "description": "Child process that uses Q",
   "main": "index.js",
