--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_success:
   - "$(npm bin)/coveralls < ./coverage/lcov.info"
   - "$(npm bin)/codeclimate-test-reporter < ./coverage/lcov.info"
 before_deploy:
-  - "git archive --format tar.gz -o ${HOME}/simple-process.tar.gz ${TRAVIS_BRANCH}"
+  - "[ -n "${TRAVIS_TAG}" ] && git archive --format tar.gz --prefix=simple-process-${TRAVIS_TAG} -o ${HOME}/simple-process-${TRAVIS_TAG}.tar.gz ${TRAVIS_TAG}"
 deploy:
   - provider: npm
     skip_cleanup: true
@@ -31,7 +31,7 @@ deploy:
     on:
       tags: true
   - provider: releases
-    file: ${HOME}/simple-process.tar.gz
+    file: ${HOME}/simple-process-${TRAVIS_TAG}.tar.gz
     skip_cleanup: true
     overwrite: true
     api_key:
