--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "mock-require": "^3.0.3",
+    "semver": "^6.1.1",
     "sinon": "^7.3.2"
   },
   "dependencies": {
